Set visibility for issue sortable placeholder #722

--- a/app/assets/stylesheets/pages/boards/show.sass
+++ b/app/assets/stylesheets/pages/boards/show.sass
@@ -8,7 +8,7 @@
 $image-path: 'pages/p-boards-show'
 
 .p-boards-show
-  background: #f5f5f5
+  background: $board-background
   .container
     padding: 0
 
@@ -298,6 +298,12 @@ $image-path: 'pages/p-boards-show'
 
   .ui-sortable-helper
     +box-shadow(0 25px 20px -10px rgba(100, 100, 100, 0.3))
+
+  .issue.ui-sortable-placeholder
+    +border-radius(2px)
+    background-color: #dfdfdf
+    border: none
+    visibility: visible !important
 
   .issue
     +border-radius(2px)
